<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/fragment_dialog_pay_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/fragment_dialog_pay_title"
        android:textSize="@dimen/text_big_20"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragment_dialog_pay_sum_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintTop_toBottomOf="@+id/fragment_dialog_pay_title"
        >
        <TextView
            android:id="@+id/fragment_dialog_pay_sum_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textSize="@dimen/text_default_16"
            android:textStyle="bold"
            android:textColor="@color/dark_text"
            android:layout_marginEnd="2dp"
            app:layout_constraintEnd_toStartOf="@+id/fragment_dialog_pay_sum_postfix_tv"
            app:layout_constraintTop_toTopOf="parent"
            />
        <TextView
            android:id="@+id/fragment_dialog_pay_sum_postfix_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textSize="@dimen/text_small_12"
            android:text="@string/rubles_postfix"
            android:textColor="@color/dark_text"
            app:layout_constraintStart_toEndOf="@+id/fragment_dialog_pay_sum_tv"
            app:layout_constraintBottom_toBottomOf="@+id/fragment_dialog_pay_sum_tv" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/fragment_dialog_pay_btn_pay"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@color/blue_primary"
        android:text="@string/do_payment"
        android:textColor="@color/white_background"
        app:layout_constraintTop_toBottomOf="@+id/fragment_dialog_pay_sum_container"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>