<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="should_show_labels"
            type="Boolean" />

        <variable
            name="backlog_value"
            type="Double" />

        <variable
            name="backlog_addition"
            type="String" />

        <variable
            name="meter_identifier"
            type="String" />

        <variable
            name="meter_type"
            type="String" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ripple_meter_item"
        android:paddingStart="12dp"
        android:paddingTop="6dp"
        android:paddingEnd="12dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/top_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/bot_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/meter_identifier_container"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/meter_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/meter_text"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/text_small_12"
                    android:visibility="@{should_show_labels?View.VISIBLE:View.GONE}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/meter_identifier"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{meter_identifier}"
                    android:textColor="@color/dark_text"
                    android:textSize="@dimen/text_default_16"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/meter_text" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/meter_type_container"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="@+id/meter_identifier_container"
                app:layout_constraintEnd_toEndOf="parent">

                <TextView
                    android:id="@+id/meter_type_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/meter_type_text"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/text_small_12"
                    android:visibility="@{should_show_labels?View.VISIBLE:View.GONE}"
                    app:layout_constraintBottom_toTopOf="@+id/meter_type_value"
                    app:layout_constraintEnd_toEndOf="parent" />

                <TextView
                    android:id="@+id/meter_type_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{meter_type}"
                    android:textColor="@color/dark_text"
                    android:textSize="@dimen/text_default_16"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/bot_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/checkbox">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="@{backlogValue.equals(0)?View.GONE:View.VISIBLE}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/backlog_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/backlog"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/text_small_12"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/backlog_value" />

                <TextView
                    android:id="@+id/backlog_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{backlog_value.toString()}"
                    android:textColor="@color/dark_text"
                    android:textSize="@dimen/text_default_16"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/backlog_value_addition"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@{backlog_addition}"
                    android:textColor="@color/dark_text"
                    android:textSize="@dimen/text_default_16"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/backlog_value" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="@{backlogValue.equals(0)?View.VISIBLE:View.GONE}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/backlog_empty"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/backlog_empty"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/text_small_12"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <CheckBox
            android:id="@+id/checkbox"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:padding="0dp"
            android:button="@drawable/checkbox_selector"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/dark_text"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
